force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores order records received from the SAP system, representing confirmed purchases or external sales data.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TNO-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>