force-app/main/default/objects/Transaction__c/fields/accountId__c.field-meta.xml
<CustomField>
    <fullName>accountId__c</fullName>
    <description>Establishes a direct relationship between Transaction and Account.</description>
    <inlineHelpText>Corresponding Account</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>