force-app/main/default/objects/Transaction__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>Displays the Account number of the Account related to this Transaction.</description>
    <formula>accountId__r.AccountNumber</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>