force-app/main/default/objects/Transaction__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categorizes as Platinum, Gold, Silver, or Bronze based on transaction amount.</description>
    <formula>IF(
   amount__c&gt;100000,
   &apos;Platinum&apos;, 
   IF(
      amount__c&gt;50000,
      &apos;Gold&apos;,
      IF(
         amount__c&gt;25000,
         &apos;Silver&apos;, 
         IF(
            amount__c&gt;0,
           &apos;Bronze&apos;,
            null
          )
      )
   )
)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>