force-app/main/default/objects/Transaction__c/fields/orderNumber__c.field-meta.xml
<CustomField>
    <fullName>orderNumber__c</fullName>
    <description>Displays the external order number</description>
    <externalId>true</externalId>
    <inlineHelpText>The external order number</inlineHelpText>
    <label>Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>