force-app/main/default/objects/Transaction__c/fields/requestId__c.field-meta.xml
<CustomField>
    <fullName>requestId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Allows sales representatives to link each Transaction to the Service Request Form it is associated with.</description>
    <inlineHelpText>Corresponding Service Request</inlineHelpText>
    <label>Service Request</label>
    <referenceTo>RequestForm__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>