force-app/main/default/objects/Transaction__c/fields/totalLineItems__c.field-meta.xml
<CustomField>
    <fullName>totalLineItems__c</fullName>
    <description>This will show the total line items available per this Transaction.</description>
    <inlineHelpText>Total line items available per this Transaction.</inlineHelpText>
    <label>Total Line Items</label>
    <summaryForeignKey>TxnLineItem__c.transactionId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>